fixed alignment for myservices header section

--- a/app/components/ActionLink/ActionLink.module.scss
+++ b/app/components/ActionLink/ActionLink.module.scss
@@ -1,7 +1,6 @@
 @import "../../styles/mixins";
 
 .action_link_container {
-	border: 1px solid red;
 	width: fit-content;
 
 	.action_link_button {
