--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -9,6 +9,11 @@
 	justify-content: flex-start;
 	align-items: center;
 }
+@mixin flex-end {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
 
 @mixin flex-space-between {
 	display: flex;
